--- a/package.json
+++ b/package.json
@@ -2,11 +2,9 @@
   "name": "atomizer-custom-helpers",
   "version": "0.0.1",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "demo": "./node_modules/atomizer/bin/atomizer -r src/index.js -o demo/demo.css demo/demo.html"
-
-
   },
   "repository": {
     "type": "git",
